# cezzis-pycore

./: .gitignore  GitVersion.yml  README.md  cezzis-kafka.code-workspace  cezzis-oauth-fastapi.code-workspace  cezzis-oauth.code-workspace  cezzis-otel.code-workspace
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  SUPPORT.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: user-story-template.md
.github/workflows/: cezzis-kafka-cicd.yaml  cezzis-kafka-packages-cicd.yaml  cezzis-oauth-cicd-fastapi.yaml  cezzis-oauth-cicd.yaml  cezzis-oauth-fastapi-cicd.yaml  cezzis-otel-cicd.yaml
cezzis-kafka/: makefile  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
cezzis-kafka/cezzis_kafka/: __init__.py  async_kafka_consumer.py  kafka_consumer_settings.py
cezzis-kafka/src/: ikafka_message_processor.py  kafka_consumer.py  kafka_consumer_settings.py
cezzis-kafka/test/: test_async_kafka_consumer.py  test_kafka_consumer_settings.py  test_kafka_producer.py  test_simple_async.py
cezzis-oauth-fastapi/: README.md  makefile  pyproject.toml
cezzis-oauth-fastapi/cezzis_oauth_fastapi/: __init__.py  oauth_authorization.py
cezzis-oauth-fastapi/test/: test_oauth_authorization.py
cezzis-otel/: README.md  pyproject.toml  pytest.ini
kafka-packages/: .pypirc  .ruff.toml  README-pypi.md  README.md  coverage.xml  makefile  pyproject.toml  pytest-results.xml  test_integration.py  test_simple_async.py
oauth-packages/: README-pypi.md  README.md  makefile  pyproject.toml  pytest.ini
otel-packages/: README.md  makefile  pyproject.toml
(+38 files in other folders)
