[project]
name = "cezzis_kafka"
version = "0.0.1"
description = "cezzis-kafka is a lightweight Python library for working with Kafka topics and event streams. It simplifies producing, consuming, and managing messages, enabling seamless integration with distributed systems and real-time data pipelines. Designed for flexibility and ease of use, cezzis-kafka supports both synchronous and asynchronous workflows."
authors = [
    {name = "mtnvencenzo",email = "rvecchi@gmail.com"}
]
packages = [{include = "cezzis_kafka", from = "."}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "confluent-kafka (>=2.12.1,<3.0.0)",
    "types-confluent-kafka (>=1.4.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "ruff (>=0.14.3,<0.15.0)",
    "pytest-mock (>=3.15.1,<4.0.0)"
]
